Feed preview tidy up

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://zerolab.org/"
 languageCode = "en"
-title = "Stuff and nonsense"
+title = "Stuff and nonsense - zerolab"
 
 theme = "zero"
 
